基本完成了服务器端的控制逻辑

--- a/myHttpServer/resource/chessTable.html
+++ b/myHttpServer/resource/chessTable.html
@@ -4,9 +4,9 @@
 		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-		<meta name="author" content="feihu">
-		<meta name="Copyright" content="succez.wangzr.com,版权所有，禁止转载">
-		<meta name="description" content="网络五子棋">
+		<meta name="author" content="feihu"/>
+		<meta name="Copyright" content="succez.wangzr.com,版权所有，禁止转载"/>
+		<meta name="description" content="网络五子棋"/>
 		<title>网络五子棋</title>
 		<script language="JavaScript">
 			//在positionTransform中将从e获取的坐标转换成数组中的坐标，
