添加了maven依赖

--- a/myHttpServer/resource/chessTable.html
+++ b/myHttpServer/resource/chessTable.html
@@ -8,7 +8,7 @@
 		<meta name="Copyright" content="succez.wangzr.com,版权所有，禁止转载"/>
 		<meta name="description" content="网络五子棋"/>
 		<title>网络五子棋</title>
-		<script language="JavaScript">
+		<script language="JavaScript" type="text/javascript">
 			//在positionTransform中将从e获取的坐标转换成数组中的坐标，
 			//在paintchess中将数组中的坐标转换成在table中交点处的坐标
 			var x=0;
