--- a/myHttpServer/resource/index.html
+++ b/myHttpServer/resource/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8">
+		<title>exception</title>
 	</head>
 	<body>
 		<h1>404 File Not Found</h1>
