--- a/myHttpServer/resource/chessTable.html
+++ b/myHttpServer/resource/chessTable.html
@@ -1,150 +1,15 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 TRANSITIONAL//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 	<head>
-		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
-		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+		<link rel="stylesheet" href="chess.css" type="text/css"></link>
+		<link rel="icon" href="favicon.ico" type="image/x-icon" />
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 		<meta name="author" content="feihu"/>
 		<meta name="Copyright" content="succez.wangzr.com,版权所有，禁止转载"/>
 		<meta name="description" content="网络五子棋"/>
 		<title>网络五子棋</title>
-		<script  language="JavaScript" type="text/javascript">
-			var x = 0;//table中的坐标
-			var y = 0;
-			var X = 0;//绝对坐标
-			var Y = 0;
-			var owner=1;
-			var arr = new Array(15);
-			for (var i = 0; i < 15; i++) {
-				arr[i] = new Array(15);
-				for (var j = 0; j < 15; j++) {
-					arr[i][j] = 0;
-				}
-			}
-			function paintchess(e) {
-				var panel = document.getElementById("chesspanel");
-				if (x != -1 && arr[x][y] == 0) {
-					var img = document.createElement("img");
-					if(owner==-1){
-						img.setAttribute("src", "/white.png")
-					}else{
-						img.setAttribute("src", "/black.png")
-					}
-					img.style.position = "absolute";
-						img.style.top = Y + "px";
-						img.style.left = X + "px";
-						panel.appendChild(img);
-						arr[x][y]=owner;
-						owner=-owner;
-				}
-			}
-			function positionTransform(e) {
-				x = parseInt(e.clientX / 37);
-				y = parseInt(e.clientY / 37);
-				var tempx = e.clientX % 37;
-				var tempy = e.clientY % 37;
-				if (tempx < 18.5 && tempy < 18.5) {
-					x = x - 1;
-					y = y - 1;
-				}
-				else if (tempx > 18.5 && tempy > 18.5) {
-				}
-				else if (tempx < 18.5 && tempy > 18.5) {
-					x = x - 1;
-				}
-				else if (tempx > 18.5 && tempy < 18.5) {
-					y = y - 1;
-				}
-				else {
-					x = -1;
-					y = -1;
-				}
-				X = x * 37 + 18.5;
-			    Y = y * 37 + 18.5;
-			}
-			function userchess(e){
-				positionTransform(e);
-				paintchess(e);
-			}
-			function start(){
-				alert("游戏开始了");
-			}
-		</script>
-		<style>
-			#chesspanel {
-						position:absolute;
-						top:0px;
-						left:0px;
-						margin:0px;
-						padding:37px;
-						background:#CD853F;
-						}
-			#chesspanel table{
-							margin:0px;
-							padding:0px;
-							cursor:pointer;
-							}
-			#chesspanel table td{
-								height:35px;
-								width:35px;
-								}
-			#control{
-				position:absolute;
-				top:0px;
-				left:594px;
-				margin:0px;
-				padding:0px;
-				width:400px;
-				height:594px;
-				background:#E0F0F8;
-			}
-			#user{
-				position:absolute;
-				top:2px;
-				margin:0px;
-				width:396px;
-				height:200px;
-				border:2px inset #D02090;
-				background-image:url(user.jpg);
-				background-repeat:no-repeat;
-			}
-			#computer{
-				position:absolute;
-				top:392px;
-				margin:0px;
-				width:396px;
-				height:200px;
-				border:2px inset #D02090;
-				background-image:url(computer.jpg);
-				background-repeat:no-repeat;
-				
-			}
-			#message{
-				position:absolute;
-				top:204px;
-				margin:0px;
-				width:396px;
-				height:186px;
-				border-left:2px inset #D02090;
-				border-right:2px inset #D02090;
-			}
-			#start{
-				position:relative;
-				top:150px;
-				left:20px;
-				width:80px;
-				height:30px;
-			}	
-			#harmony{
-				position:absolute;
-				top:0px;
-				left:994px;
-				margin:0px;
-				width:355px;
-				height:594px;
-				background:#E0F0F8;
-			}				
-		</style>
+		<script src="chess.js"></script>
+		<script src="connection.js"></script>
 	</head>
 	<body>
 		<div id="chesspanel" onclick="userchess(event)">
