--- a/myHttpServer/resource/chessTable.html
+++ b/myHttpServer/resource/chessTable.html
@@ -145,7 +145,7 @@
 						window.alert("there is something wrong");
 					}
 				}
-			}									
+			}
 		</script>
 	</head>
 	<body>
@@ -379,11 +379,17 @@
 		</div>
 		<div id="control">
 			<div id="user">
+				<div id="white" class="chessbox"></div>
 			</div>
 			<div id="message">
 				<input type="button" value="开始" id="start" onclick="startGame()">
+				<form id="choose">
+					初级：<input type="radio" checked="checked" name="aiLevel">
+					高级：<input type="radio" name="aiLevel">
+				</form>
 			</div>
 			<div id="computer">
+				<div id="black"class="chessbox"></div>
 			</div>
 		</div>
 		<div id="harmony">
