基本的框架，还有很多要改进

--- a/myHttpServer/resource/chessTable.html
+++ b/myHttpServer/resource/chessTable.html
@@ -1,4 +1,4 @@
-<html>
+<html style="background:#E0F0F8;">
 	<head>
 		<link rel="stylesheet" href="chess.css" type="text/css"></link>
 		<link rel="icon" href="favicon.ico" type="image/x-icon" />
@@ -18,7 +18,7 @@
 			var winer=0;
 			var owner = 1;//在绘制棋子的时候用到，根据其确定该绘什么颜色的棋子
 			var aiLevel=1;
-			var XMLHttpReq = false;			
+			var XMLHttpReq = false;
 			var arr = new Array(15);//客户端和服务器端都会维护一个数组去记录下棋的状况，客户端只是用来查询下棋点是否合法。
 			for (var i = 0; i < 15; i++) {
 				arr[i] = new Array(15);
@@ -27,7 +27,6 @@
 				}
 			}
 			function paintchess() {
-				debugger;
 				if (x != -1 && arr[x][y] == 0) {//指定合法的下棋点
 					var img = document.createElement("img");
 					var panel = document.getElementById("chesspanel");
@@ -391,8 +390,6 @@
 			<div id="computer">
 				<div id="black"class="chessbox"></div>
 			</div>
-		</div>
-		<div id="harmony">
 		</div>
 	</body>
 </html>
