添加了对电脑级别的选择

--- a/myHttpServer/resource/chessTable.html
+++ b/myHttpServer/resource/chessTable.html
@@ -245,7 +245,7 @@
 			</div>
 			<div id="message">
 				<input type="button" value="开始" id="start" onclick="startGame()"/>
-				<form id="choose">
+				<form id="choose" name="choose">
 					初级：<input type="radio" checked="checked" name="aiLevel"/>
 					高级：<input type="radio" name="aiLevel"/>
 				</form>
